# converse

./: .gitignore  Dockerfile  README.md  converse.cabal
html/: index.html
src/: ChatServer.hs  HtmlWebpage.hs  Main.hs  Types.hs  Webserver.hs
