cabal-version:       3.0
name:                converse
version:             0.1.0.0
author:              Trevor Thai Kim Nguyen
maintainer:          trevortknguyen@gmail.com
build-type:          Simple

executable converse
  main-is:             src/Main.hs
  build-depends:       base >=4.13 && <4.14
                       , scotty
                       , text
  default-language:    Haskell2010
