cabal-version:       3.0
name:                converse
version:             0.1.0.0
author:              Trevor Thai Kim Nguyen
maintainer:          trevortknguyen@gmail.com
build-type:          Simple

executable converse
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       ChatServer
                       , HtmlWebpage
                       , Types
  build-depends:       base >=4.13 && <4.14
                       , scotty
                       , text
                       , bytestring
                       , websockets
                       , aeson
  default-language:    Haskell2010
